src/app.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@plugin 'daisyui' {
    themes: corporate --default, business --prefersdark;
}
@custom-variant dark (&:where([data-theme=business], [data-theme=business] *));;

@theme {
    --font-serif: 'PT Serif', serif;
}

html {
    @apply bg-base-200 dark:bg-neutral font-serif overflow-x-hidden overflow-y-scroll transition-colors;
}

h1 {
    @apply text-center
}

.prose {
    @apply m-auto w-full
}

